switch `Executors.newCachedThreadPool` with `Executors.newThreadPerTaskExecutor`