@@ -40,7 +40,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.Semaphore;
-import java.util.concurrent.ThreadFactory;
 import java.util.stream.Collectors;
 
 import javax.inject.Inject;
@@ -82,7 +81,6 @@ import com.google.common.base.Strings;
 import com.google.common.base.Throwables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 
 /**
  * Used to retrieve measurements from {@link org.opennms.integration.api.v1.timeseries.TimeSeriesStorage }.
@@ -106,9 +104,8 @@ public class TimeseriesFetchStrategy implements MeasurementFetchStrategy {
 
     private ResourceDao resourceDao;
 
-    private final ThreadFactory namedThreadFactory = new ThreadFactoryBuilder().setNameFormat("TimeseriesFetchStrategy-%d").build();
-
-    private final ExecutorService threadPool = Executors.newCachedThreadPool(namedThreadFactory);
+    private final ExecutorService threadPool = Executors.newThreadPerTaskExecutor(
+            Thread.ofVirtual().name("TimeseriesFetchStrategy-", 0).factory());
 
     // Used to limit the number of threads that are performing aggregation calculations in parallel
     private final Semaphore availableAggregationThreads = new Semaphore(PARALLELISM);
